finalizacao do projeto

--- a/index.html
+++ b/index.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Kumbh+Sans:wght@400;700&family=Lexend+Deca&family=Outfit:wght@300;400;600&family=Red+Hat+Display:wght@500;700;900&display=swap"
+    rel="stylesheet">
+
   <title>Frontend Mentor | Profile card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <div class="container">
+    <main class="main">
+        <div class="background">
+        <img src="/images/bg-pattern-card.svg" alt="" class="img">
+          <img src="images/image-victor.jpg" alt="foto do usuario" class="img-perfil">
+        </div>
+        
+    
+      <div class="dados-perfil">
+        <p class="name">Victor Crest <span>26</span></p>
+        <p class="country" >London</p>
+      </div>
+      <ul class="card-numbers">
+        <li class="info">
+          <p class="counter">80k</p>
+          <span class="counter-type">Followers</span>
+        </li>
+        <li class="info">
+          <p class="counter">803k</p>
+          <span class="counter-type">Likes</span>
+        </li>
+        <li class="info">
+          <p class="counter">1.4K</p>
+          <span class="counter-type">Photos</span>
+        </li>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      </ul>
+    </main>
   </div>
+
+
+
 </body>
+
 </html>
